--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,12 @@
 bld/
 [Oo]bj/
 [Ll]og/
+app.publish
 !Simple Mass Renamer.exe
 Simple Mass Renamer.exe*config
 Simple Mass Renamer.exe*manifest
-Simple Mass Renamer.vshost.exe*config
-Simple Mass Renamer.vshost.exe*manifest
+Simple Mass Renamer.vshost*
+Simple Mass Renamer.application
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
